# synmeshx

./: .gitignore  LICENCE  README.md  docker-compose.yml  scripts.sh
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 88f845ee5c4c_create_base_tables.py
backend/app/: main.py  models.py
backend/app/api/routes/: auth.py  context.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py
backend/app/services/: mesh_listener.py
backend/app/utils/: redis_utils.py
backend/migrations/versions/: 11b33a166e86_create_initial_tables.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
frontend/.next/cache/: config.json
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
