[project]
name = "synmeshx"
version = "0.1.0"
description = "Backend for SynmeshX"
requires-python = ">=3.11"
dependencies = [
   "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "redis",
    "pydantic[email]",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "httpx",
    "langchain",
    "pgvector",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["app"]
include = ["app*"]

[tool.uv]
dev-dependencies = ["pytest", "httpx"]

