[project]
name = "synmeshx"
version = "0.1.0"
description = "Backend for SynmeshX"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg2-binary",
    "redis",
    "redis[async]",
    "pydantic[email]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "httpx",
    "langchain",
    "pgvector",
]

[dependency-groups]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["app"]
include = ["app*"]
